2011-05-16  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add line-wrap toolbar item.

2011-05-12  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Update ecb setting.

2011-05-11  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (format-cxx-directory): Add format-cxx-directory.

2011-05-10  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Use tabbar-buffer-groups to group tabbar.

2011-05-05  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (grep-current-dir): Fix a bug.
	(executable-find): Auto add executable attribute for script.

2011-05-04  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add winsav.el

2011-04-18  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add multi-term.el

2011-04-14  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Bind double-mouse-2 to semantic-ia-fast-jump-back.

	* init-site.el: Only capture (ctrl " ") in ibus-mode.

2011-04-01  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Don't capture f6-f12 in ibus-mode.

2011-03-24  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Bind some mouse event.

2011-03-19  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (and): Set mouse event for semantic.

	* init-misc.el ("tabbar"): Add tabbar-ruler.el

	* init-basic.el ("filecache"): Add filecache setting.

2011-03-17  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Let whitespace-style compatible with emacs-23.3
	Add find-func setting.

2011-03-10  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Enable auto-complete in comment.

	* init-basic.el (user-include-dirs): user-include-dirs also used
	by ffap.

2011-03-09  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (mark-current-line-mouse): Bind <left-margin>
	<mouse-1> to mark-current-line-mouse.

2011-03-04  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Only enable dired+ in window-system.

2011-02-23  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: User dark frame-background-mode for terminal.
